fix(website): fix word wrapping of table column headers
If the browser window is around 480 pixels wide, the rightmost header in
the benchmark data tables word-wraps:

                                response time (milliseconds)
                                                     ÷quick-lint-
    linter                  min      avg     max               js

This looks weird. Prevent word wrapping.

--- a/website/public/benchmarks/benchmark.css
+++ b/website/public/benchmarks/benchmark.css
@@ -320,6 +320,10 @@ body.javascript .javascript-only {
   text-align: right;
 }
 
+.benchmark-table thead th {
+  white-space: nowrap;
+}
+
 .benchmark-table tbody tr {
   background-color: hsla(var(--hue), 70%, 80%);
 }
